--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Новикова Надежда">
     <link rel="stylesheet" href="./pages/index.css">
     <title>Путешествия по России</title>
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
   </head>
   <body class="page">
     <header class="header">
@@ -22,8 +22,11 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img src="./images/lead-polka.jpg" alt="Верхняя полка поезда" class="lead__image">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figure>
+          <img src="./images/lead-polka.jpg" alt="Верхняя полка поезда" class="lead__image">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
+        
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -55,7 +58,7 @@
         <img src="./images/photo-grid-ergaki.jpg" alt="Туман и горы природного парка Ергаки" class="photo-grid__image">
       </section>
       <section class="places">
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -71,8 +74,8 @@
               немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
               спокойствие природы и запах стального, прохладного моря.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -87,8 +90,8 @@
               Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. 
               Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -103,8 +106,8 @@
               Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
               орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -118,8 +121,8 @@
               Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. 
               В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -133,12 +136,12 @@
               В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. 
               Чтобы все знали, кто тут хозяин.</p>
           </div>
-        </div>
+        </article>
       </section>
-      <section>
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover" target="_blank">
+      <section class="cover">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background" target="_blank">
           <div class="cover__overlay"></div>
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
       </section>
