--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <figure>
+        <figure class="lead__picture">
           <img src="./images/lead-polka.jpg" alt="Верхняя полка поезда" class="lead__image">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
@@ -57,7 +57,7 @@
         <img src="./images/photo-grid-baikal-2.jpg" alt="Береговые скалы у Байкала" class="photo-grid__image">
         <img src="./images/photo-grid-ergaki.jpg" alt="Туман и горы природного парка Ергаки" class="photo-grid__image">
       </section>
-      <section class="places">
+      <section class="places content__section-center">
         <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
@@ -138,7 +138,7 @@
           </div>
         </article>
       </section>
-      <section class="cover">
+      <section class="cover content__section-center">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background" target="_blank">
           <div class="cover__overlay"></div>
           <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
